--- a/rahul.html
+++ b/rahul.html
@@ -39,6 +39,7 @@
 
     <h1>Welcome to My Demo Page</h1>
     <h2>this is write on vs code</h2>
+    <h3>this is also write on vs code</h3>
     <p>This is a simple HTML demo with a button and an image.</p>
 
     <button onclick="showMessage()">Click Me!</button>
